Make it to be configurable base URL via command line.

--- a/Client/Pages/AddDevice.razor
+++ b/Client/Pages/AddDevice.razor
@@ -8,6 +8,6 @@
     async Task OnClickOK(Device newDevice)
     {
         await DeviceService.AddDeviceAsync(newDevice);
-        NavigationManager.NavigateTo("/");
+        NavigationManager.NavigateTo(NavigationManager.BaseUri);
     }
 }
