--- a/Server/Pages/_Host.cshtml
+++ b/Server/Pages/_Host.cshtml
@@ -1,11 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@page "/"
+@using  Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
+<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Blazor WOL</title>
-    <base href="/" />
+    <base href="@(Configuration.GetValue("base-href", "/"))" />
     <link href="styles.css" rel="stylesheet" />
     <!-- style for blazor-error-ui -->
     <link rel="stylesheet"
